force-app/main/default/objects/Account_Assignment__c/Account_Assignment__c.object-meta.xml
<CustomObject>
    <label>Account Assignment</label>
    <nameField>
        <label>Account Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>