force-app/main/default/objects/Account_Assignment__c/fields/AccountRef__c.field-meta.xml
<CustomField>
    <fullName>AccountRef__c</fullName>
    <description>TBD</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Assignments</relationshipLabel>
    <relationshipName>Account_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>