force-app/main/default/objects/Account_Assignment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>ADDMONTHS(TODAY(), 1)</defaultValue>
    <description>TBD</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>