force-app/main/default/objects/Account_Assignment__c/fields/Split__c.field-meta.xml
<CustomField>
    <fullName>Split__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Split</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>