force-app/main/default/objects/Account_Assignment__c/fields/StatusPick__c.field-meta.xml
<CustomField>
    <fullName>StatusPick__c</fullName>
    <description>TBD</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>