force-app/main/default/objects/Account_Assignment__c/fields/Unique_NameTrig__c.field-meta.xml
<CustomField>
    <fullName>Unique_NameTrig__c</fullName>
    <description>TBD</description>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>