force-app/main/default/objects/Account_Assignment__c/fields/UserRef__c.field-meta.xml
<CustomField>
    <fullName>UserRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TBD</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>